feat: pokemon style game added

--- a/pokemon-style-game-main/index.html
+++ b/pokemon-style-game-main/index.html
@@ -63,6 +63,23 @@
     "
   ></div>
 
+  <div
+    id="houseDialogueBox"
+    style="
+      background-color: rgba(255, 255, 255, 0.681);
+      backdrop-filter: blur(3px);
+      height: 500px;
+      width: 500px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      border: 4px black solid;
+      display: none;
+      padding: 12px;
+    "
+  ></div>
+
   <div id="userInterface" style="display: none">
     <!-- Represents health bar of draggle (enemy) -->
     <div
@@ -192,8 +209,10 @@
 <script src="data/battleZones.js"></script>
 <script src="data/collisions.js"></script>
 <script src="data/attacks.js"></script>
+<script src="data/trees.js"></script>
 <script src="data/monsters.js"></script>
 <script src="data/characters.js"></script>
+<script src="data/houses.js"></script>
 <script src="js/utils.js"></script>
 <script src="classes.js"></script>
 <script src="index.js"></script>
