feat: pokemon style game added

--- a/pokemon-style-game-main/index.html
+++ b/pokemon-style-game-main/index.html
@@ -80,6 +80,12 @@
     "
   ></div>
 
+  <button
+    class="p-4 py-2 bg-emerald-600 flex top-2 right-2 absolute z-[5] items-center justify-center hover:bg-emerald-700"
+  >
+    Dashboard
+  </button>
+
   <div id="userInterface" style="display: none">
     <!-- Represents health bar of draggle (enemy) -->
     <div
@@ -206,6 +212,7 @@
   referrerpolicy="no-referrer"
 ></script>
 <script src="data/audio.js"></script>
+<script src="https://cdn.tailwindcss.com"></script>
 <script src="data/battleZones.js"></script>
 <script src="data/collisions.js"></script>
 <script src="data/attacks.js"></script>
