--- a/pokemon-style-game-main/index.html
+++ b/pokemon-style-game-main/index.html
@@ -57,11 +57,14 @@
     class="bg-white/70 backdrop-blur-md h-[500px] w-[500px] absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 border-4 border-black hidden p-3"
   ></div>
 
-  <button
-    class="p-4 py-2 bg-emerald-600 flex top-2 right-2 absolute z-[5] items-center justify-center hover:bg-emerald-700"
-  >
-    Dashboard
-  </button>
+  <a href="dashboard.html">
+    <button
+      class="p-4 py-2 bg-emerald-600 flex top-2 right-2 absolute z-[5] items-center justify-center hover:bg-emerald-700"
+    >
+      Dashboard
+    </button>
+  </a>
+  
 
   <div
     id="directions"
