--- a/pokemon-style-game-main/index.html
+++ b/pokemon-style-game-main/index.html
@@ -54,7 +54,7 @@
 
   <div
     id="houseDialogueBox"
-    class="bg-white/70 backdrop-blur-md h-[500px] w-[500px] absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 border-4 border-black hidden p-3"
+    class="bg-white/70 backdrop-blur-md h-[75vh] max-w-xl w-full absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 border-4 border-black hidden p-3"
   ></div>
   <div class="absolute flex gap-2 top-2 right-2 z-[5]">
     <a href="dashboard.html">
@@ -391,3 +391,4 @@
 <script src="index.js"></script>
 <script src="js/wallet-connect.js"></script>
 <script src="js/web3-utils.js"></script>
+<script src="js/fetchPoolData.js"></script>
