feat: pokemon style game added

--- a/pokemon-style-game-main/index.html
+++ b/pokemon-style-game-main/index.html
@@ -47,6 +47,11 @@
   ></div>
 
   <canvas></canvas>
+
+  <div id="toast-container" class="fixed top-0 right-0 z-50 space-y-2 p-4">
+    <!-- Toast will be appended here dynamically -->
+  </div>
+
   <div
     id="characterDialogueBox"
     class="bg-white absolute bottom-0 z-[5] left-0 right-0 border-t-4 border-black hidden p-3"
