--- a/pokemon-style-game-main/index.html
+++ b/pokemon-style-game-main/index.html
@@ -81,7 +81,7 @@
     <!-- Display Wallet Address -->
     <div
       id="walletInfo"
-      class="p-4 py-2 bg-emerald-600 text-white rounded-lg hover:bg-emerald-700"
+      class="p-4 py-2 bg-emerald-600 text-white rounded-lg hover:bg-emerald-700 hidden"
     >
       <p class="text-lg font-medium">Wallet Address:</p>
       <p id="walletAddress" class="text-gray-700 font-mono mt-1"></p>
